# phase_manager

./: CMakeLists.txt
bindings/python/: CMakeLists.txt  pyPhase.cpp  pyPhaseManager.cpp  pyTimeline.cpp
include/phase_manager/: horizon_interface.h  phase.h  phase_manager.h  timeline.h
src/: phase.cpp  phase_manager.cpp  timeline.cpp
tests/: additem_and_itemreference.py  insert_phase.py
